# easy-rss-server

./: .gitignore  Cargo.toml  README.md  easy-rss-cli@.service  easy-rss-cli@.timer
rss_src/: 163.json  README.md  bjnews.json  engadget.json  gcores.json  geekpark.json  ifeng.json  iplaysoft.json  ithome.json  jiemian.json  linux_cn.json  msra.json  mydrivers.json  qdaily.json  solidot.json  sspai.json  toodaylab.json  un.json  williamlong.json  zhihu.json
src/: app.rs  config.rs  lib.rs  output.rs
