[package]
name = "easy-rss-lib"
version = "0.1.0"
authors = ["git <guixin2010@live.cn>"]
edition = "2018"

[[bin]]
name = "easy-rss-cli"
path = "src/bin/easy-rss-cli.rs"
test = false
bench = false

[[bin]]
name = "easy-rss-output"
path = "src/bin/easy-rss-output.rs"
test = false
bench = false

[dependencies]
easy_rss = "*"
json = "*"
redis = "*"
mysql = "*"
chrono = "*"
md5 = "*"
headless_chrome = "*"